--- a/src/main/resources/templates/thymeleaf/main.html
+++ b/src/main/resources/templates/thymeleaf/main.html
@@ -145,22 +145,21 @@
                 </ul>
                 <div class="btn_swipe_right"></div>
             </div>
-            <div class="magazine9_wrap">
-                <div class="tit_wrap">
-                    <h2>매거진 9</h2>
-                    <button class="btn_more">더보기</button>
-                </div>
-                <div class="btn_swipe_left"></div>
-                <div class="magazine9">
-                    <div class="contents">
-                        <p class="tit">매거진9  Insights 2023 / 6월호</p>
-                        <p class="text">전시에 관한 거의 모든 것에 대하여</p>
-                        <p class="text pt0">All about Exhibition</p>
-                        <span>Art-ist 박혜미</span>
-                    </div>
-                </div>
-                <div class="btn_swipe_right"></div>
-            </div>
+          <div class="contents max-1500 DealingArtInsights">
+				<div class="cont-title ta-t60">
+			<!-- <h3>Dealing Art <span class="ta-no"><br/></span>Insights</h3> -->
+					<h3>Magazine<span style="color:red">9</span></h3>
+				</div>
+			<div class="cns-div swi-box">
+			<div class="swiper swipeMgz" >
+			<div class="swiper-wrapper" id="mainMgz"></div>
+			<div class="swiper-pagination swpa-2 pc-no"></div>
+			</div>
+			<div class="swiper-button-prev mgzPrev sbp ta-no" style="left:auto;float:left"><span><img src="/resources/img/arr-l.jpg"></span></div>
+			<div class="swiper-button-next mgzNxt sbn ta-no" style="right:auto;"><span><img src="/resources/img/arr-r.jpg"></span></div>
+			</div>
+			</div>	
+            
             <div class="popular_member_wrap">
                 <div class="tit_wrap">
                     <h2>인기 회원</h2>
@@ -239,6 +238,7 @@
                             <div class="pic"><a href="#"><img src="/resources/img/img_new/main_exhint_review_sample03.jpg" alt=""></a></div>                                                                      
                             <div class="name"><img src="/resources/img/img_new/mypage/ico_dauser.png" alt=""><span>딜링아트</span></div>
                             <div class="text">나를 돌아보는 전시</div>
+                            
                         </div>
                     </li>
                 </ul>
@@ -251,8 +251,8 @@
 
 <script type="text/javascript">
 
-	
- 	
+
+
 </script>
 
 <!-- 네이버 광고 로그분석 추적 코드 -->
@@ -265,5 +265,7 @@ if (window.wcs) {
 wcs.inflow("www.dealing-art.com"); 
 wcs_do(_nasa);
 }
+
+
 </script>
 </html>
