--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -383,6 +383,8 @@ top:0;
     left: -1500px;
     z-index: 2;
 }
+
+
 /*10.04 정영우 추가*/
 .swi-box1 {
     position: relative;
@@ -1254,10 +1256,12 @@ div{
 }
 
 /* .mySwiper3{height:497px;} */
-.swiper{z-index:0;}
-/* .mySwiper3 .swiper-slide{padding-top:15px;padding-bottom:15px;padding-right: 18px; *//* width: 300px !important; *//* flex: 1;}
-.mySwiper3 .swiper-slide.hover{width: 284px !important;height: 530px !important;}
-.mySwiper3 .swiper-slide a{ display: block;} */
+/* .swiper{z-index:1;} */
+
+/* 23.10.12 김동희 mySwiper3 .swiper-slide 사이즈 수정 내용 css */
+.mySwiper3 .swiper-slide{padding-top:15px; padding-bottom:15px; padding-right: 90px; width: 405px;} 
+/*.mySwiper3 .swiper-slide.hover{width: 284px !important;height: 530px !important;} */
+/* .mySwiper3 .swiper-slide a{ display: block;}  */
 .gis .swiper-slide{padding-right: 0px;/* width: 101px !important; */}
 
 .ta-h3{
@@ -1953,7 +1957,7 @@ input[type="radio"]:checked + label span {
     padding: 75px 0 125px 0;
 }
 .bat-box button{
-    width: 100%;
+    width: 33%;
     border-radius: 35px;
     font-size: 20px;
     font-weight: 600;
@@ -1977,6 +1981,7 @@ input[type="radio"]:checked + label span {
 .ba-btn2{
     border: #e9625c 3px solid;
     color: #e9625c;
+    
 }
 .ba-btn3{
     border: #c5c5c5 3px solid;
@@ -6089,7 +6094,8 @@ position: relative;background-color: #fbfbfb;}
 /* 23.08.03 재현 추가 내용 css */
 .cont-title a button{width: 100px;font-size: 20px;letter-spacing: -1.5px;color: #828282;background: url("../img/img_new/ico_more.png") 100% 6px no-repeat;text-align: left;position: absolute;top: -2px;right: 20px;}
 
-.exhint_review .pic{width: 350px;height: 316px;cursor: pointer;}
+/* 23.10.12 김동희 exhint_review .pic 사이즈 수정 내용 css */
+.exhint_review .pic{width: 380px; height: 380px; cursor: pointer;}
 .exhint_review img{width: 100%;height: 100%;}
 .exhint_review .name img{
 	width: 40px; 
