--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -114,7 +114,9 @@
 				$("#lp_mgz9Dtl").css("font-size", "2.0em");
 				$(".text-huge").css("font-size", "1.2em");
 				
-			}	 
+			}	
+			//전시 nav 삭제로 css 조정
+			$(".magazine9_wrap #nav ul li").css("width", "25%");
 		});	
 		//매거진 브라우저 체크
 		function mgzMobileBrowserChk2(){
@@ -142,7 +144,7 @@
 		                <ul>
 		                    <li><a onclick="mgzMobileBrowserChk2();" href="javascript:void(0);" >홈</a></li>
 		                    <li><a href="/mgz9/insights" class="over">인사이트</a></li>
-		                    <li><a href="/mgz9/exhibition">전시</a></li>
+		                    <!-- <li><a href="/mgz9/exhibition">전시</a></li> -->
 		                    <li><a href="/mgz9/media">아티스트 필름</a></li>	                    
 		                    <li><a href="/mgz9/artist">아티스트</a></li>
 		                </ul>
