--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -173,9 +173,9 @@
 							<div class="swiper-slide">
 								<img src="/resources/img/banner-21_mobile.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
-							<div class="swiper-slide">
+							<!-- <div class="swiper-slide">
 								<img src="/resources/img/banner-12_mobile.png" onclick="javascript:location.href='/mgz9/insights';" style="cursor:pointer;"/>
-							</div>
+							</div> -->
 							<div class="swiper-slide">
 								<img src="/resources/img/banner-13_mobile.jpg" onclick="javascript:location.href='/mgz9/media';" style="cursor:pointer;"/>
 							</div>
