--- a/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/exhibition.html
@@ -102,7 +102,7 @@
 		                <ul>
 		                    <li><a onclick="mgzMobileBrowserChk3();" href="javascript:void(0);" >홈</a></li>
 		                    <li><a href="/mgz9/insights">인사이트</a></li>
-		                    <li><a href="/mgz9/exhibition" class="over">전시</a></li>
+		                    <!-- <li><a href="/mgz9/exhibition" class="over">전시</a></li> -->
 		                    <li><a href="/mgz9/media">아티스트 필름</a></li>	                    
 		                    <li><a href="/mgz9/artist">아티스트</a></li>
 		                </ul>
@@ -217,9 +217,9 @@
 	
 	        $(this).siblings('.upload-name').val(filename);
 	    });
-	    
-	    
-	    
+	  	
+	    //전시 nav 삭제로 css 조정
+		$(".magazine9_wrap #nav ul li").css("width", "25%"); 
 	}); 
 	
 	
