--- a/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_artist.html
@@ -96,7 +96,6 @@
                 <ul>
                     <li><a onclick="mgzMobileBrowserChk4();" href="javascript:void(0);" >홈</a></li>
                     <li><a href="/mgz9/insights">인사이트</a></li>
-                    <li><a href="/mgz9/exhibition">전시</a></li>
                     <li><a href="/mgz9/media">아티스트 필름</a></li>	                    
                     <li><a href="/mgz9/artist" class="over">아티스트</a></li>
                 </ul>
@@ -119,28 +118,28 @@
 				<div class="field_activity">
 					<div class="tit">활동분야</div>
 					<div class="checkbox_wrap">
-					<input type="checkbox" id="fa1" name="" value="" class="searchOption" onclick="">
+					<input type="checkbox" id="fa1" name="" value="PNTNG" class="searchOption" onclick="dealSearch()">
                     <label for="fa1"><span></span>회화</label>
-					<input type="checkbox" id="fa2" name="" value="" class="searchOption" onclick="">
-                    <label for="fa2"><span></span>에디션</label>
-					<input type="checkbox" id="fa3" name="" value="" class="searchOption" onclick="">
-                    <label for="fa3"><span></span>사진</label>
-					<input type="checkbox" id="fa4" name="" value="" class="searchOption" onclick="">
+					<!-- <input type="checkbox" id="fa2" name="" value="" class="searchOption" onclick="dealSearch()">
+                    <label for="fa2"><span></span>에디션</label> -->
+					<!-- <input type="checkbox" id="fa3" name="" value="" class="searchOption" onclick="dealSearch()">
+                    <label for="fa3"><span></span>사진</label> -->
+					<input type="checkbox" id="fa4" name="" value="MLDNG" class="searchOption" onclick="dealSearch()">
                     <label for="fa4"><span></span>조형</label>
-					<input type="checkbox" id="fa5" name="" value="" class="searchOption" onclick="">
-                    <label for="fa5"><span></span>공예</label>
-					<input type="checkbox" id="fa6" name="" value="" class="searchOption" onclick="">
+					<!-- <input type="checkbox" id="fa5" name="" value="" class="searchOption" onclick="dealSearch()">
+                    <label for="fa5"><span></span>공예</label> -->
+					<input type="checkbox" id="fa6" name="" value="VDMD" class="searchOption" onclick="dealSearch()">
                     <label for="fa6"><span></span>영상/미디어</label>
-					<input type="checkbox" id="fa7" name="" value="" class="searchOption" onclick="">
+					<input type="checkbox" id="fa7" name="" value="INSTL" class="searchOption" onclick="dealSearch()">
                     <label for="fa7"><span></span>설치</label>
 					</div>
 				</div>
 				<div class="year_birth">
 					<div class="tit">출생년도</div>
 					<div class="input_cal">
-						<input type="date" id="startDate" onchange="checkCalendar()">
-                		<span>~</span>
-                		<input type="date" id="endDate" onchange="checkCalendar()">
+						<input type="month" id="startDate" >
+                		<span style="z-index: 1;">~</span>
+                		<input type="month" id="endDate"  style="z-index: 100;">	<!-- z-index없으면 input출력이 안됩니다 -->
 					</div>
 				</div>
 			</div>
@@ -179,7 +178,16 @@
 		 }
 		 
 	 }
-		
+	$(document).ready(function() {
+		//페이지 오픈 시 전체 게시글 출력
+		dealSearch();
+		//전시 nav 삭제로 css 조정
+		$(".magazine9_wrap #nav ul li").css("width", "25%");
+	});
+	
+	
+	
+	
 		/* $(document).on("click", "#search", function() {
 			var keyword = $("#searchKeyword").val();			
 			var currentNum = $(".pageBtn").val();
@@ -192,7 +200,7 @@
 				url : "/mgz9/result",
 				data : {
 					keyword : keyword,
-					currentNum : currentNum
+					currentNum : currentNuSm
 				},
 				success : function(data) {
 					var result = data.result;
@@ -246,24 +254,87 @@
 			});
 		}); */
 		
-		/* 리셋 */
+		/* 초기화 */
 		function reset() {
 			$("#searchKeyword").val('');
 			$("#total").empty();
 			$("#list").empty();
 			$("#page").empty();
+			$("input:checkbox[class='searchOption']").prop("checked", false);
+			$("#startDate").val("");
+			$("#endDate").val("");
 		}
+/* 		function checkoption(){
+			var startDate = $("#startDate").val();
+			var endDate = $("#endDate").val();
+			
+			if(startDate==null && endDate ==null){
+				dealSearch();
+			}
+			else if(startDate!=null && endDate !=null){
+				dealSearch();
+			}
+			else if(startDate==null && endDate !=null){
+				modalAlertShow("시작날짜를 입력해주세요.");
+				console.log($("#startDate").val()+"ddd"+$("#endDate").val());
+				return;
+			}
+			else if(startDate!=null && endDate ==null){
+				modalAlertShow("종료날짜를 입력해주세요.");
+				console.log($("#startDate").val()+"ddd"+$("#endDate").val());
+				return;
+			}
+		} */
 		
 		/* 검색 */
 		function dealSearch() {
+			//지정변수 및 파라미터 변수
+			var option = [];
 			var keyword = $("#searchKeyword").val();
-			if(keyword.length > 0) {
+			//input type year이 없어서 받은 날짜에서 연도만 자름
+			var startDate = $("#startDate").val().substring(0,4);
+			var endDate = $("#endDate").val().substring(0,4);
+			var param = new Object();
+			
+			//활동분야 검색옵션 벨리데이션
+			$(".searchOption").each(function(){
+			    if( $(this).is(":checked") == true ){
+			      option.push($(this).val());  
+			    }
+			});
+			
+			if (Array.isArray(option) && option.length === 0){
+				var option = null;
+			}
+			
+			//출생년도 검색옵션 벨리데이션
+			if((startDate === "" ) && (endDate !== "" )){
+				modalAlertShow("시작날짜를 입력해주세요.");
+				return;
+				console.log(startDate);
+			}
+			else if((startDate !== "" ) && (endDate === "" )){
+				modalAlertShow("종료날짜를 입력해주세요.");
+				return;
+				
+			}else if((startDate !== "" ) && (startDate >= endDate)){
+				modalAlertShow("시작날짜는 종료날짜보다 이전이어야합니다.");
+				return;
+			}else
+				
+			//파라미터값 입력
+			param.keyword = keyword;
+			param.option = option;
+			param.startDate = startDate;
+			param.endDate = endDate;
+			
+			//Ajax로 파라미터 보낸 후 검색된 데이터 Html로 화면출력
+			//if(keyword.length > 0) {
 				$.ajax({
 					type : "post",
 					url : "/mgz9/search",
-					data : {
-						keyword : keyword
-					},
+					contentType: 'application/json; charset=utf-8',
+					data : JSON.stringify(param),
 					success : function(data) {
 						var result = data.result;
 						var totalCount = data.totalCount;
@@ -354,13 +425,13 @@
 						console.log(data);
 					}
 				});
-			} else {
-				modalAlertShow("검색어를 입력해주세요.");
-			}
+			//} else {
+			//	modalAlertShow("검색어를 입력해주세요.");
+			//}
 		}
 		
 		/* $(document).on("click", ".firstPage", function(){
-			modalAlertShow("첫페이지 입니다.");
+			modalAlertShow("첫페이지 입니다.")
 		});
 		
 		$(document).on("click", ".lastPage", function(){
@@ -369,16 +440,51 @@
 		
 		/* 페이네이션 검색 */
 		$(document).on("click", ".currentNum", function() {
+			//지정변수 및 파라미터 변수
 			var currentNum = $(this).attr("id");
+			var option = [];
 			var keyword = $("#searchKeyword").val();
-			if(keyword.length > 0) {
+			var startDate = $("#startDate").val().substring(0,4);
+			var endDate = $("#endDate").val().substring(0,4);
+			var param = new Object();
+			
+			//활동분야 검색옵션 벨리데이션
+			$(".searchOption").each(function(){
+				if( $(this).is(":checked") == true ){
+					option.push($(this).val());  
+				}
+			});
+			
+			if (Array.isArray(option) && option.length === 0){
+				var option = null;
+			}
+			
+			//출생년도 검색옵션 벨리데이션
+			if((startDate === "" ) && (endDate !== "" )){
+				modalAlertShow("시작날짜를 입력해주세요.");
+				
+			}
+			else if((startDate !== "" ) && (endDate === "" )){
+				modalAlertShow("종료날짜를 입력해주세요.");
+				
+			}else if((startDate !== "" ) && (startDate >= endDate)){
+				modalAlertShow("시작날짜는 종료날짜보다 이전이어야합니다.");
+			}else
+				
+			//파라미터 값 입력
+			param.keyword = keyword;
+			param.option = option;
+			param.startDate = startDate;
+			param.endDate = endDate;
+			param.currentNum = currentNum;
+			
+			//Ajax로 파라미터 보낸 후 해당 페이지의 데이터를 Html로 화면출력
+			//if(keyword.length > 0) {
 				$.ajax({
-					type : "post",					
+					type : "post",
 					url : "/mgz9/search",
-					data : {
-						keyword : keyword,
-						currentNum : currentNum
-					},
+					contentType: 'application/json; charset=utf-8',
+					data : JSON.stringify(param),
 					success : function(data) {
 						var result = data.result;
 						var totalCount = data.totalCount;						
@@ -476,9 +582,9 @@
 						console.log(data);
 					}
 				});
-			} else {
-				modalAlertShow("검색어를 입력해주세요.");
-			}
+			//} else {
+			//	modalAlertShow("검색어를 입력해주세요.");
+			//}
 		});
 		
 		/* 검색후 상세페이지 */		
