--- a/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_main_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/magazine9_main_mo.html
@@ -113,7 +113,7 @@
                 <ul>
                     <li><a onclick ="mgzMobileBrowserChk1();" href="#" class="over">홈</a></li>
                     <li><a href="/mgz9/insights">인사이트</a></li>
-                    <li><a href="/mgz9/exhibition">전시</a></li>
+                    <!-- <li><a href="/mgz9/exhibition">전시</a></li> -->
                     <li><a href="/mgz9/media">아티스트 필름</a></li>
                     <li><a href="/mgz9/artist">아티스트</a></li>
                 </ul>
@@ -168,16 +168,17 @@
 						</div>
 					</div>
 				</div>
+				<div class="swiper-button-prev InPrev sbp ta-no" style="left:auto;float:left"><span><img src="/resources/img/arr-l.jpg"></span></div>
+				<div class="swiper-button-next InNext sbn ta-no" style="right:auto;"><span><img src="/resources/img/arr-r.jpg"></span></div>
 			</div>            
             
-			<div class="artist_update_wrap">
+			<div class="artist_update_wrap ">
                 <div class="tit_wrap">
                     <h2>아티스트 업데이트</h2>
                     <a href="/mgz9/artist"><button type="button" class="btn_more">더보기</button></a>
                 </div>
 				<div class="cns-div swi-box mt20">
-					<div
-						class="swiper mySwiper4 swiper-initialized swiper-horizontal swiper-ios">
+					<div class="swiper mySwiper4">
 						<div class="swiper-wrapper cn-b" id="mgz9_artistList" aria-live="polite">
 							<!-- 
 							<div class="swiper-slide swiper-slide-active" style="width: 390px;">
@@ -201,16 +202,18 @@
 							 -->
 						</div>
 						
-						<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
-						<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+					<!-- 	<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+						<span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span> -->
 					</div>
-					<div class="swiper-button-next InNextSwiper4 sbn ta-no" tabindex="0" role="button" aria-label="Next slide" aria-controls="updatedArtist" aria-disabled="false">
+					<!-- <div class="swiper-button-next InNextSwiper4 sbn ta-no" tabindex="0" role="button" aria-label="Next slide" aria-controls="updatedArtist" aria-disabled="false">
 						<span><img src="/resources/img/arr-r.jpg"></span>
 					</div>
 					<div class="swiper-button-prev InPrevSwiper4 sbp ta-no swiper-button-disabled" tabindex="-1" role="button" aria-label="Previous slide" aria-controls="updatedArtist" aria-disabled="true">
 						<span><img src="/resources/img/arr-l.jpg"></span>
-					</div>
-				</div>								 
+					</div> -->
+				</div>
+				<div class="swiper-button-next  InNextSwiper4 sbn ta-no"><span><img src="/resources/img/arr-r.jpg"></span></div>
+				<div class="swiper-button-prev  InPrevSwiper4 sbp ta-no"><span><img src="/resources/img/arr-l.jpg"></span></div>								 
             </div>
         </div>
     </div>
@@ -287,8 +290,10 @@
 		$("body").css("overflow", "scroll");
 		$("#lp_mgz9Dtl_insight").modal("hide");
 		$("#lp_mgz9Dtl_youtube").modal("hide");
+		//전시 nav 삭제로 css 조정
+		$(".magazine9_wrap #nav ul li").css("width", "25%");
 	});
-	
+    
 	// 홈 배너
 	function fn_setBanner(list) {
 		console.log(list)
@@ -396,11 +401,11 @@
     	    mdaCntntTemp = mdaCntntTemp.replaceAll("&amp;amp;","&");
     	    mdaCntntTemp = mdaCntntTemp.replaceAll('width="560" height="315"','width="360" height="210"');
 			if(idx==0){
-				html += '<div class="swiper-slide swiper-slide-active" style="width: 380px;" role="group" aria-label="'+ (idx+1) +' / '+ list.length +'">';
+				html += '<div class="swiper-slide swiper-slide-active" role="group" aria-label="'+ (idx+1) +' / '+ list.length +'">';
 			}else if(idx==1){
-				html += '<div class="swiper-slide swiper-slide-next" style="width: 380px;" role="group" aria-label="'+ (idx+1) +' / '+ list.length +'">';
+				html += '<div class="swiper-slide swiper-slide-next" role="group" aria-label="'+ (idx+1) +' / '+ list.length +'">';
 			}else{
-				html += '<div class="swiper-slide" style="width: 380px;" role="group" aria-label="'+ (idx+1) +' / '+ list.length +'">';
+				html += '<div class="swiper-slide" role="group" aria-label="'+ (idx+1) +' / '+ list.length +'">';
 			}
 			html += '	<a href="#" class="mgz-youtube_'+item.mgzSq+'" data-toggle="modal" data-target="#lp_mgz9Dtl_youtube" onclick="selectMgz9Dtl_youtube('+ item.mgzSq +');">';
 			html += '		<div style="pointer-events: none;">'+ mdaCntntTemp +'</div>';
@@ -473,12 +478,13 @@
 			$.each(list, function(idx, item) {
 				
 				if(idx==0){
-					html += '<div class="swiper-slide swiper-slide-active" style="width: 390px;">';
+					html += '<div class="swiper-slide swiper-slide-active">';
 				}else if(idx==1){
-					html += '<div class="swiper-slide swiper-slide-next" style="width: 390px;">';
+					html += '<div class="swiper-slide swiper-slide-next">';
 				}else{
-					html += '<div class="swiper-slide " style="width: 390px;">';
+					html += '<div class="swiper-slide">';
 				}
+				
 				html += '	<a href="javascript:void(0);" onclick="fn_artstDetail('+ item.artstSq +')">';
 				html += '		<div class="cns-box3">';
 				html += '			<img src="'+ item.artstProfileImgUrl +'">';
@@ -486,6 +492,8 @@
 				html += '		</div>';
 				html += '	</a>';
 				html += '</div>';
+				
+
 			});
 			return html;
 		}
@@ -494,7 +502,96 @@
 // 	    	window.location.href = requestUrl+"?artstSq="+artstSq;
 			loginCheck(requestUrl,artstSq);   	
 	    }
-  	 
+		
+		let ww = window.innerWidth;
+		
+		var mySwiper3Num = 4;
+		  var swiper = new Swiper(".mySwiper3", {
+		    	   
+			  	slidesPerView: "auto",
+			   	loop: false,
+			   /* 	autoplay: {
+			      	    delay: 3000,
+			       	  	disableOnInteraction: false,
+			   	}, */
+				navigation: {
+					 nextEl: ".InNext",
+					 prevEl: ".InPrev",
+				},
+	    	     
+		    });
+		    
+		    responsiveSwiper3(mySwiper3Num);
+		    
+		    function responsiveSwiper3(mySwiper3Num) {
+				
+		    	if (ww >= 1200) {
+					
+					swiper = new Swiper('.mySwiper3', {
+						slidesPerView: mySwiper3Num,
+						loop: false,
+						effect: 'slide',
+						navigation: {
+							 nextEl: ".InNext",
+							 prevEl: ".InPrev",
+						},
+						
+					});
+					
+				} else if (ww < 1200) {
+					
+					
+					swiper = new Swiper('.mySwiper3', {
+						slidesPerView: 1,
+						loop: false
+						 
+					});
+				}
+			}
+		    
+		    var mySwiper4Num = 4;
+			  var swiper = new Swiper(".mySwiper4", {
+			    	   
+			  		slidesPerView: "auto",
+				   	loop: false,
+				   	/* autoplay: {
+				          	delay: 3000,
+				          	disableOnInteraction: false,
+				   	}, */
+					navigation: {
+						 nextEl: ".InNextSwiper4",
+						 prevEl: ".InPrevSwiper4",
+					},
+		    	     
+			    });
+			    
+			    responsiveSwiper4(mySwiper4Num);
+			    
+			    function responsiveSwiper4(mySwiper4Num) {
+					
+			    	if (ww >= 1200) {
+						
+						swiper = new Swiper('.mySwiper4', {
+							slidesPerView: mySwiper4Num,
+							loop: false,
+							effect: 'slide',
+							navigation: {
+								 nextEl: ".InNextSwiper4",
+								 prevEl: ".InPrevSwiper4",
+							},
+							
+						});
+						
+					} else if (ww < 1200) {
+						
+						
+						swiper = new Swiper('.mySwiper4', {
+							slidesPerView: 1,
+							loop: false
+							 
+						});
+					}
+				}
     </script>
 </body>
 </html>
